# freegsnke

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  COPYRIGHT  README.md  active_coils.pickle  build_env_dev.sh  environment.yml  environment_2024.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-freegs4e.txt  requirements-freegsfast.txt  requirements-uda.txt  requirements.txt  setup.py
docs/: Makefile  README.md  build_documentation.sh  conf.py  index.rst  requirements_docs.txt
example/: example_NK_evolution.ipynb
examples/: Equilibrium_Examples.ipynb  PI3.geqdsk  Probes_exploration_testsing.ipynb  README.md  basic_dynamical_evolution.ipynb  equilibrium_examples.ipynb  example0 - build_tokamak_machine.ipynb  example01 - static_inverse_solve_MASTU.ipynb  example01a - static_inverse_solve_MASTU.ipynb  example01b - advanced_static_inverse_solve.ipynb  example02 - static_forward_solve_MASTU.ipynb  example03 - extracting_equilibrium_quantites.ipynb  example04 - using_magnetic_probes.ipynb  example05 - evolutive_forward_solve.ipynb  example05a - nonlinear_and_linear_evolution_with_GS.ipynb  example05b - linear_evolution_without_GS.ipynb  example05c - linear_evolution_with_relinearisation.ipynb  example07a - Anamak.ipynb  example07c - ITER.ipynb  example09 - virtual_circuits_MASTU.ipynb  example1 - static_inverse_solve_MASTU.ipynb  example10 - control_loop.ipynb  example10 - growth_rates.ipynb  example11 - pulse_design_tool.ipynb  example11 - read_and_write_to_imas_test.ipynb  example11 - super_fast_no_gs.ipynb  example6c - gui_prep.ipynb  (+50 more)
(+230 files in other folders)
